# fraud-detection-agent-demo

./: .gitignore  README.md  pyproject.toml
data/: data-exploration.ipynb
knowledge/: account_takeover.md  mexico_regulation.md  money_mule_patterns.md  response_playbook.md  shap_interpretation_guide.md  synthetic_identity.md  transaction_velocity.md
src/: agent.py  app.py  explain.py  rag.py  test_agent.py  train.ipynb
