[project]
name = "fraud-detection-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.96.0",
    "faiss-cpu>=1.13.2",
    "google-genai>=1.73.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "kaggle>=2.0.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "mlcroissant>=1.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "shap>=0.51.0",
    "streamlit>=1.56.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
